Motion path incorrectly displays the number of frames and key frames. #59675

Closed
opened 2018-12-20 13:23:26 +01:00 by Arsen Mikitov · 4 comments

The motion path and frame points are displayed normally, but the path of frame numbers and key frame numbers have an offset or rotation relative to the motion path.

Blender 2.80 Beta Linux 64 bit (December 20, 00:28:44 - a91886e76e)
Operating system: Ubuntu 18.04
Graphics card: RTX-2080Ti

Motion-Path.blend

Motion-Path_2.jpg

Motion-Path_1.jpg

The motion path and frame points are displayed normally, but the path of frame numbers and key frame numbers have an offset or rotation relative to the motion path. Blender 2.80 Beta Linux 64 bit (December 20, 00:28:44 - a91886e76ebd) Operating system: Ubuntu 18.04 Graphics card: RTX-2080Ti [Motion-Path.blend](https://archive.blender.org/developer/F6015846/Motion-Path.blend) ![Motion-Path_2.jpg](https://archive.blender.org/developer/F6015851/Motion-Path_2.jpg) ![Motion-Path_1.jpg](https://archive.blender.org/developer/F6015850/Motion-Path_1.jpg)
Author

Added subscriber: @ArsenMikitov

Added subscriber: @ArsenMikitov
Jacques Lucke self-assigned this 2018-12-20 14:54:46 +01:00
Member
[D4113](https://archive.blender.org/developer/D4113)

This issue was referenced by 07569a333b

This issue was referenced by 07569a333b2e27ccc17cfe6662a9789f74d5fc71
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59675
No description provided.