Fix T59675: Motion path frame numbers at wrong positions

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D4113